# portfolio

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Trunk.toml  build-games.sh  build.rs  index.html
.github/workflows/: main.yml
games/snake/: Cargo.toml
games/snake/src/: main.rs
public/: styles.css
site/: Cargo.toml
site/src/: lib.rs  main.rs
site/src/pages/: home.rs
src/: lib.rs  main.rs
src/components/: mod.rs
src/pages/: home.rs  not_found.rs
style/: styles.css
