[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
leptos_router = { version = "0.7.0", features = ["nightly", "ssr"] }
leptos = { version = "0.7.0", features = ["nightly", "hydrate", "ssr"] }
axum = { version = "0.7" }
console_error_panic_hook = "0.1"
leptos_axum = { version = "0.7.0" }
leptos_meta = { version = "0.7.0", features = ["ssr"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs"] }
wasm-bindgen = "=0.2.99"
thiserror = "1"
tracing = { version = "0.1" }
http = "1"

[package.metadata.leptos]
output-name = "portfolio"
site-root = "target/site"
style-file = "public/styles.css"
assets-dir = "public"
site-addr = "127.0.0.1:8000"
# browserquery = "defaults"
lib-profile-release = "wasm-release"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "PROD"
