[workspace]
resolver = "3"
members = ["games/snake", "site"]

[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
strip = "debuginfo"
inherits = "release"
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
