[workspace]
resolver = "3"
members = ["games/snake", "site"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
strip = "debuginfo"
inherits = "release"
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
