[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
strip = "debuginfo"
inherits = "release"
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7.0", features = ["nightly"] }
leptos_router = { version = "0.7.0", features = ["nightly"] }
axum = { version = "0.7", optional = true }
console_error_panic_hook = "0.1"
leptos_axum = { version = "0.7.0", optional = true }
leptos_meta = { version = "0.7.0" }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "signal",
], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
wasm-bindgen = "=0.2.101"
thiserror = "1"
tracing = { version = "0.1", optional = true }
http = "1"
styled = "0.3.2"
stylist = "0.13.0"
signal = { version = "0.7.0", optional = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:tracing",
  "dep:signal",
]

[package.metadata.leptos]
output-name = "portfolio"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/styles.css"
assets-dir = "public"
site-addr = "127.0.0.1:8000"
reload-port = 8001
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
