[package]
name = "snake"
version = "0.1.0"
edition = "2024"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
strip = "debuginfo"
inherits = "release"
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
bevy = "0.16.1"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
